--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 
 		<!-- Meta Tags -->
-		<title>Dylan's Start Page</title>
+		<title>Google</title>
 
 		<!-- Makes the page fit the device width -->
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,13 +17,14 @@
 	</head>
 
 	<body>
-		<h1>Penis</h1>
+		<main class="wrap">
+			<img src="img/logo.png" class="logo">
+			<input type="text" class="search"></input>
 
-
-
-
-
-
-
+			<div class="btn-wrap">
+				<button type="submit" class="btn">Google Search</button>
+				<button type="submit" class="btn">I'm Feeling Lucky!</button>
+			</div>
+		</main>
 	</body>
 </html>
