--- a/src/index.html
+++ b/src/index.html
@@ -17,9 +17,17 @@
 	</head>
 
 	<body>
+		<nav>
+			<ul>
+				<li><a href="#">+You</a></li>
+				<li><a href="#">Images</a></li>
+				<li><a href="#">Gmail</a></li>
+				<li><a href="#" class="btn sign-in">Sign In</a></li>
+			</ul>
+		</nav>
 		<main class="wrap">
-			<img src="img/logo.png" class="logo">
-			<input type="text" class="search"></input>
+			<img src="img/logo.png" class="logo" alt="Google">
+			<input type="text" class="search">
 
 			<div class="btn-wrap">
 				<button type="submit" class="btn">Google Search</button>
