Added footer, finished for now

--- a/src/index.html
+++ b/src/index.html
@@ -16,16 +16,18 @@
 
 	</head>
 
-	<body>
+	<body class="site">
 		<nav>
-			<ul>
+			<ul class="right">
 				<li><a href="#">+You</a></li>
 				<li><a href="#">Images</a></li>
 				<li><a href="#">Gmail</a></li>
 				<li><a href="#" class="btn sign-in">Sign In</a></li>
 			</ul>
 		</nav>
-		<main class="wrap">
+
+		<main class="site-content">
+		<div class="vertical-center">
 			<img src="img/logo.png" class="logo" alt="Google">
 			<input type="text" class="search">
 
@@ -33,6 +35,21 @@
 				<button type="submit" class="btn">Google Search</button>
 				<button type="submit" class="btn">I'm Feeling Lucky!</button>
 			</div>
+		</div>
 		</main>
+
+		<footer>
+			<ul>
+				<li><a href="#">Advertising</a></li>
+				<li><a href="#">Business</a></li>
+				<li><a href="#">About</a></li>
+			</ul>
+
+			<ul class="right">
+				<li><a href="#">Privacy</a></li>
+				<li><a href="#">Terms</a></li>
+				<li><a href="#">Settings</a></li>
+			</ul>
+		</footer>
 	</body>
 </html>
