Loading the logo from Google.com because everybody already has it cached.

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
 
 		<main class="site-content">
 		<div class="vertical-center">
-			<img src="img/logo.png" class="logo" alt="Google">
+			<img src="https://www.google.com.au/images/srpr/logo11w.png" class="logo" alt="Google">
 			<input type="text" class="search">
 
 			<div class="btn-wrap">
