Added links to the nav and footer

--- a/src/index.html
+++ b/src/index.html
@@ -19,9 +19,9 @@
 	<body class="site">
 		<nav>
 			<ul class="right">
-				<li><a href="#">+You</a></li>
-				<li><a href="#">Images</a></li>
-				<li><a href="#">Gmail</a></li>
+				<li><a href="https://plus.google.com">+You</a></li>
+				<li><a href="https://mail.google.com/mail">Gmail</a></li>
+				<li><a href="https://www.google.com/images">Images</a></li>
 			</ul>
 		</nav>
 
@@ -39,15 +39,15 @@
 
 		<footer>
 			<ul>
-				<li><a href="#">Advertising</a></li>
-				<li><a href="#">Business</a></li>
-				<li><a href="#">About</a></li>
+				<li><a href="https://www.google.com/intl/en/ads">Advertising</a></li>
+				<li><a href="https://www.google.com/services">Business</a></li>
+				<li><a href="https://www.google.com/intl/en/about.html">About</a></li>
 			</ul>
 
 			<ul class="right">
-				<li><a href="#">Privacy</a></li>
-				<li><a href="#">Terms</a></li>
-				<li><a href="#">Settings</a></li>
+				<li><a href="https://www.google.com/intl/en/policies/privacy">Privacy</a></li>
+				<li><a href="https://www.google.com/intl/en/policies/terms">Terms</a></li>
+				<li><a href="https://www.google.com/preferences">Settings</a></li>
 			</ul>
 		</footer>
 	</body>
