Site now functions! (That was easy)

--- a/src/index.html
+++ b/src/index.html
@@ -28,12 +28,14 @@
 		<main class="site-content">
 		<div class="vertical-center">
 			<img src="https://www.google.com.au/images/srpr/logo11w.png" class="logo" alt="Google">
-			<input type="text" class="search">
+			<form method="get" action="https://www.google.com/search">
+				<input type="text" name="q"  class="search">
 
 			<div class="btn-wrap">
 				<button type="submit" class="btn">Google Search</button>
-				<button type="submit" class="btn">I'm Feeling Lucky!</button>
+				<button type="submit" name=btnI class="btn">I'm Feeling Lucky!</button>
 			</div>
+			</form>
 		</div>
 		</main>
 
