Fixed css link for gh-pages

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 		<!-- Needed for ie to dispaly the page correctly -->
 		<meta http-equiv="x-ua-compatible" content="IE=edge" />
 
-		<link rel="stylesheet" href="../css/main.css">
+		<link rel="stylesheet" href="css/main.css">
 
 	</head>
 
